<resources>
    <string name="app_name">Kutubxona</string>
    <string name="login_title">Tizimga kirish</string>
    <string name="login_subtitle">Kutubxona boshqaruv tizimi</string>
    <string name="username">Foydalanuvchi nomi</string>
    <string name="password">Parol</string>
    <string name="btn_login">Kirish</string>
    <string name="btn_register_link">Ro\'yxatdan o\'tish</string>
    <string name="register_title">Ro\'yxatdan o\'tish</string>
    <string name="full_name">Ism va Familiya</string>
    <string name="role_select">Rolni tanlang:</string>
    <string name="role_user">Foydalanuvchi</string>
    <string name="role_admin">Admin</string>
    <string name="btn_register">Ro\'yxatdan o\'tish</string>
    <string name="already_have_account">Hisobingiz bormi? Kirish</string>
    <string name="admin_panel_title">Admin Paneli</string>
    <string name="user_panel_title">Kutubxona</string>
    <string name="tab_books">Kitoblar</string>
    <string name="tab_users">Foydalanuvchilar</string>
    <string name="tab_loans">Ijara kitoblar</string>
    <string name="tab_my_books">Mening kitoblarim</string>
    <string name="tab_library_books">Kutubxona kitoblari</string>
    <string name="btn_add_book">Kitob qo\'shish</string>
    <string name="book_title">Kitob nomi</string>
    <string name="book_author">Muallif</string>
    <string name="book_genre">Janri (Kategoriya)</string>
    <string name="book_total_copies">Jami nusxalar soni</string>
    <string name="book_desc">Qisqacha ma\'lumot</string>
    <string name="btn_save">Saqlash</string>
    <string name="btn_cancel">Bekor qilish</string>
    <string name="btn_borrow">Kitob olish</string>
    <string name="btn_return">Topshirish</string>
    <string name="search_hint">Kitob yoki muallifni qidirish...</string>
    <string name="search_users_hint">Foydalanuvchini qidirish...</string>
    <string name="no_books_found">Hech qanday kitob topilmadi</string>
    <string name="no_users_found">Foydalanuvchilar topilmadi</string>
    <string name="no_loans_found">Ijara kitoblar mavjud emas</string>
    <string name="borrow_days_prompt">Necha kunga olasiz?</string>
    <string name="borrow_7_days">7 kun</string>
    <string name="borrow_14_days">14 kun (tavsiya etiladi)</string>
    <string name="borrow_30_days">30 kun</string>
    <string name="user_details_title">Foydalanuvchi ma\'lumotlari</string>
    <string name="borrowed_books_list">Foydalanuvchida bor kitoblar:</string>
    <string name="borrowed_date_label">Olingan sana:</string>
    <string name="due_date_label">Topshirish sanasi:</string>
    <string name="status_label">Holati:</string>
    <string name="status_on_time">Muddati o\'tmadi</string>
    <string name="status_overdue">Muddati o\'tib ketgan!</string>
    <string name="status_returned">Topshirilgan</string>
    <string name="logout">Chiqish</string>
    <string name="demo_admin_btn">Admin sifatida kirish (admin)</string>
    <string name="demo_user_btn">Foydalanuvchi sifatida kirish (user)</string>
    <string name="available_copies_format">Mavjud: %1$d / %2$d</string>
</resources>
